tests/paczka1/small_fuzzy/85460832.err
Error in line 2: adS3R A422 59,7
Error in line 11: F7IjLDg S204 44,8
Error in line 9: DIP1XeX5By8 A730 18,6
